--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Card Numbers by Reenhanced",
+  "name": "Card Numbers by SukuWc",
   "description": "Card Numbers makes it easier for you to talk with your team about the cards on your boards.",
-  "details": "The Card Numbers by Reenhanced Power-Up gives every card a unique number that you can use to reference the card more easily in conversation. Card numbers are displayed as a badge on the front of the card as well as a badge on the back of the card. ![Card Badge](https://reenhanced.github.io/trello-card-numbers/screenshot.png) Built by **[reenhanced](http://www.reenhanced.com)**",
+  "details": "Forked from Reenhanced!!! The Card Numbers by SukuWc gives every card a unique number that you can use to reference the card more easily in conversation. Card numbers are displayed as a badge on the front of the card as well as a badge on the back of the card. ![Card Badge](https://reenhanced.github.io/trello-card-numbers/screenshot.png) Built by **[reenhanced](http://www.reenhanced.com)**",
   "icon": {
     "url": "./images/logo.png"
   },
-  "author": "Reenhanced LLC",
+  "author": "SukuWc (Forked from Reenhanced LLC)",
   "capabilities": [
     "card-badges",
     "card-detail-badges",
