--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Card Numbers by SukuWc",
+  "name": "Order Helper by SukuWc",
   "description": "Card Numbers makes it easier for you to talk with your team about the cards on your boards.",
   "details": "Forked from Reenhanced!!! The Card Numbers by SukuWc gives every card a unique number that you can use to reference the card more easily in conversation. Card numbers are displayed as a badge on the front of the card as well as a badge on the back of the card. ![Card Badge](https://reenhanced.github.io/trello-card-numbers/screenshot.png) Built by **[reenhanced](http://www.reenhanced.com)**",
   "icon": {
